--- a/admin/docker-compose.yml
+++ b/admin/docker-compose.yml
@@ -8,3 +8,16 @@ services:
             - 8000:8000
         volumes:
             - .:/app
+        depends_on:
+            - db
+    db:
+        image: mysql:8
+        restart: always
+        command: --default-authentication-plugin=mysql_native_password
+        environment:
+            MYSQL_DATABASE: admin
+            MYSQL_ROOT_PASSWORD: root
+        volumes:
+            - .dbdata:/var/lib/mysql
+        ports:
+            - 33066:3306
